Added chat interface, message forwarding, reactions, and message deletion. Still have to work on it.
